fixed footer on mobile

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -17,3 +17,15 @@
   color: #fff;
   text-shadow: 1px 1px 0 #000, 2px 2px 0 #000, 3px 3px 0 #000;
 }
+
+@media screen and (max-width: 460px) {
+  .footer__copyright {
+    font-size: 14px;
+    text-align: center;
+  }
+
+  .footer__text {
+    font-size: 14px;
+    text-align: center;
+  }
+}
