--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -6,7 +6,7 @@
 .main {
   height: 100%;
   width: 100%;
-  padding-bottom: 70px;
+  padding-bottom: 50px;
 }
 
 @media screen and (max-width: 560px) {
